k3s-mlops-installation/master/istio.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: istio-system
  name: istio
spec:
  controller: istio.io/ingress-controller
