k3s-mlops-installation/master/dataset-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataset-registry
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataset-registry
  template:
    metadata:
      labels:
        app: dataset-registry
    spec:
      containers:
      - name: dataset-registry
        imagePullPolicy: Always
        image: gkorod/dataset-registry:v1.0
        ports:
        - containerPort: 4422
          name: http
        volumeMounts:
        - mountPath: "/datasets"
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: datasets
