k3s-mlops-installation/master/initializer.yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: initializer
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: initializer
        imagePullPolicy: Always
        image: gkorod/initializer:v1.0
        ports:
        - containerPort: 5005
          name: http
