k3s-mlops-installation/master/model-distributor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-distributor
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-distributor
  template:
    metadata:
      labels:
        app: model-distributor
    spec:
      containers:
      - name: model-distributor
        imagePullPolicy: Always
        image: gkorod/model-distributor:v1.3
        ports:
        - containerPort: 4443
          name: http
        volumeMounts:
        - mountPath: "/trained_models"
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: trained-models
