k3s-mlops-installation/master/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-runtimeclass
spec:
  rules:
    - name: add-runtimeclass
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - kubeflow
      mutate:
        patchStrategicMerge:
          spec:
            runtimeClassName: nvidia
